fixed gradient overflow issue

--- a/index.scss
+++ b/index.scss
@@ -32,6 +32,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
     margin: 0;
     padding: 0;
 
